<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoL Craft</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_feedback">Send feedback</string>
    <string name="action_stat_summary">Stat summary</string>
    
    <string name="champion_portrait">Champion portrait</string>
    <string name="item_thumb">Item thumbnail</string>
    
    <string name="search">Search</string>
    
    <string name="stat_hp">HP</string>
    <string name="stat_hp_regen">HP Regen</string>
    <string name="stat_mp">MP</string>
    <string name="stat_mp_regen">MP Regen</string>
    <string name="stat_ms">MS</string>
    <string name="stat_range">Range</string>
    <string name="stat_ad">AD</string>
    <string name="stat_mr">MR</string>
    <string name="stat_as">AS</string>	
    <string name="stat_ar">AR</string>
    <string name="stat_ap">AP</string>	
    <string name="stat_level">Level</string>
    
    <string name="stat_energy">ENERGY</string>
    <string name="stat_energy_regen">ENERGY REGEN</string>
    <string name="stat_bloodwell">BLOODWELL</string>
    <string name="stat_unknown">UNKNOWN</string>
    
    <string name="add_item">Add Item</string>	
    <string name="item_build">Item Build</string>
    <string name="runes">Runes</string>
    
    <string name="add_runes">Add Runes</string>
    
    <string name="primary_role">PRIMARY ROLE</string>
    <string name="secondary_role">SECONDARY ROLE</string>
    <string name="overall_stat_atk">ATK</string>
    <string name="overall_stat_def">DEF</string>
    <string name="overall_stat_ap">AP</string>
    <string name="overall_stat_diff">DIFF</string>
    
    
    <string name="send_feedback">Send Feedback</string>
    <string name="subject">Subject</string>
    <string name="body">Enter feedback here&#8230;</string>
    <string name="send">Send</string>
    
    <string name="preference_file_key">prefs</string>
    
    <string name="build_saved">Build saved</string>
    
    <string name="stat_summary">Stat summary</string>
    <string name="analyze_build">Analyze Build</string>

</resources>
